--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -1,3 +1,11 @@
-spring.application.name=myApplication
 server.port=8585
-user.name=Tejas Kumar
+
+# use "*" to expose all the actuator endpoints
+# individual endpoints can be exposed with a comma-delimited list
+management.endpoints.web.exposure.include=*
+management.info.env.enabled=true
+
+
+info.app.name=MyApplication
+info.app.description=Dummy Application for learning SpringBoot
+info.app.version=1.0.0
