spring security commit

--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -5,6 +5,8 @@ server.port=8585
 management.endpoints.web.exposure.include=*
 management.info.env.enabled=true
 
+# excluding individual endpoints with a comma-delimited list
+#management.endpoints.web.exposure.exclude=health,info
 
 info.app.name=MyApplication
 info.app.description=Dummy Application for learning SpringBoot
