custom value input commit

--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -11,3 +11,7 @@ management.info.env.enabled=true
 info.app.name=MyApplication
 info.app.description=Dummy Application for learning SpringBoot
 info.app.version=1.0.0
+
+# define custom property values
+coach.name=Tejas Kumar
+team.name=Java Developers Hub
