final basics commit

--- a/myApplication/src/main/resources/application.properties
+++ b/myApplication/src/main/resources/application.properties
@@ -1,4 +1,9 @@
+# change spring boot embedded server port
 server.port=8585
+
+# setting the context path of the application
+# all requests should be prefixed with /myApplication
+server.servlet.context-path=/myApplication
 
 # use "*" to expose all the actuator endpoints
 # individual endpoints can be exposed with a comma-delimited list
